# research_crew

./: .gitignore  README.md  pyproject.toml  run_competitive_analysis.sh
knowledge/: competitive_schema.md
output/: competitive_report.md  report.md
scripts/: run_competitive_analysis.sh
src/: __init__.py  competitive_crew.py  main.py
src/config/: agents.yaml
src/research_crew/: main.py
src/research_crew/crews/: __init__.py
src/research_crew/crews/competitive_crew/: __init__.py  competitive_crew.py
src/research_crew/crews/competitive_crew/config/: tasks.yaml
src/research_crew/schema/: __init__.py  competitive_analysis.py
src/tools/: source_tracker.py
