[project]
name = "research_crew"
version = "0.1.0"
description = "research_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = "==3.12.*"
dependencies = [
    "crewai[anthropic,tools]==1.14.4",
]

[project.scripts]
run_crew = "src.main:run"
run_competitive_analysis = "src.main:run_competitive_analysis"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.crewai]
type = "crew"
